--- a/src/app/components/databinding/databinding.component.html
+++ b/src/app/components/databinding/databinding.component.html
@@ -1,1 +1,59 @@
-<p>databinding works!</p>
+<div class = "row">
+  <div class = "col-4">
+     One way - from .ts to .html
+  </div>
+  <div class = "col-4">
+    
+ </div>
+ <div class = "col-4">
+   
+ </div>
+</div>
+
+
+
+<div class = "row">
+    <div class = "col-4">
+       <div class="row">
+        <div class="col-4 bg-success">
+            interpolation
+            <h4>{{courseName}}</h4>
+            <div>{{inputType}}</div>
+            <input type ="text" value = "{{courseName}}" placeholder = "Enter text"/>
+            <input type = "{{inputType}}"/>
+        </div>
+       </div>
+    </div>
+        <div class="col-4">
+           Property Binding
+           <!-- <div class="{{myClassName}}">Danger</div>          through interpolation-->
+          <div [class]="myClassName">Danger</div>                  <!--  through property binding -->
+          <input type = "text" [value] = "courseName" placeholder = "Enter text"/>
+          <input [type] = "inputType"/>
+        </div>
+        <div class = "col-4">
+         <button class="btn btn-success" (click)="showAlert('welcome to angular')">Show Welcome</button>
+         <span (click)= "showAlert('this is from span')">Click me</span>
+         <button class="btn btn-success" (click)=" changeCourseName()">Change Course</button>
+      </div>
+   
+
+
+
+   <div class = "col-4">
+      <input type = "text" [(ngModel)] ="courseName"/> 
+      <input type = "checkbox" [(ngModel)] ="isIndia"/> 
+
+      <select [(ngModel)] = "stateName">
+         <option value ="">Select</option>
+         <option value ="Maharashtra">Maharashtra</option>
+         <option value ="Goa">Goa</option>
+         <option value ="Delhi">Delhi</option>
+      </select>
+   </div>
+    
+   <div class = "col-4">
+        <h2>{{firstName()}}</h2>
+   </div>
+</div>
+  
