--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1>Hello</h1>
-<app-databinding></app-databinding>
+<!-- <h1>Hello</h1> -->
+<!-- <app-databinding></app-databinding> -->
+
+<app-structural-dir></app-structural-dir>
