--- a/src/app/components/employee-list/employee-list.component.html
+++ b/src/app/components/employee-list/employee-list.component.html
@@ -1,1 +1,6 @@
-<p>employee-list works!</p>
+
+
+<div>
+    <h1 class = 'bg-primary'>Hello from Admin</h1>
+<button class="btn btn-primary" (click) = "navigateToAttribute()">Go to structural</button>
+</div>
