--- a/src/app/directive/structural-dir/structural-dir.component.html
+++ b/src/app/directive/structural-dir/structural-dir.component.html
@@ -1,6 +1,8 @@
 <div class = "mt-2 p-2 bg-secondary text-white rounded">
     <h1>Structural Directive</h1>
     <p>*ngIf, *ngFor...</p>
+    <button class ="btn btn-primary" [routerLink]="['/emp-list']">Go to Employee list</button>
+
 </div>
 
 <div class ="row pt-3">
