--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,15 @@
           <li class="nav-item" style="margin-top: -12px; user-select: auto;">
             <a class="nav-link" routerLink="structural-dir" style="user-select: auto;">Structural Dir</a>
           </li>
+          <li class="nav-item" style="margin-top: -12px; user-select: auto;">
+            <a class="nav-link" routerLink="if-else" style="user-select: auto;">If Else</a>
+          </li>
+          <li class="nav-item" style="margin-top: -12px; user-select: auto;">
+            <a class="nav-link" routerLink="for" style="user-select: auto;">For</a>
+          </li>
+          <li class="nav-item" style="margin-top: -12px; user-select: auto;">
+            <a class="nav-link" routerLink="switch-case" style="user-select: auto;">Switch Case</a>
+          </li>
         </ul>
         <form class="d-flex" style="user-select: auto;">
           <input class="form-control me-2" type="text" placeholder="Search" style="user-select: auto;">
