--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,9 @@
           <li class="nav-item" style="margin-top: -12px; user-select: auto;">
             <a class="nav-link" routerLink="switch-case" style="user-select: auto;">Switch Case</a>
           </li>
+          <li class="nav-item" style="margin-top: -12px; user-select: auto;">
+            <a class="nav-link" routerLink="Pipe" style="user-select: auto;">Pipe</a>
+          </li>
         </ul>
         <form class="d-flex" style="user-select: auto;">
           <input class="form-control me-2" type="text" placeholder="Search" style="user-select: auto;">
