--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,9 @@
           <li class="nav-item" style="margin-top: -12px; user-select: auto;">
             <a class="nav-link" routerLink="Pipe" style="user-select: auto;">Pipe</a>
           </li>
+          <li class="nav-item" style="margin-top: -12px; user-select: auto;">
+            <a class="nav-link" routerLink="Forms" style="user-select: auto;">Forms</a>
+          </li>
         </ul>
         <form class="d-flex" style="user-select: auto;">
           <input class="form-control me-2" type="text" placeholder="Search" style="user-select: auto;">
