--- a/src/app/forms/reactive/reactive.component.html
+++ b/src/app/forms/reactive/reactive.component.html
@@ -1,64 +1,82 @@
-<!-- <form class="row g-3 needs-validation" novalidate>
-    <div class="col-md-4">
-      <label for="validationCustom01" class="form-label">First name</label>
-      <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
-      <div class="valid-feedback">
-        Looks good!
-      </div>
+<div class = "nt-2 p-2 bg-secondary text-white rounded">
+  <h1>Reactive Form</h1>
+  <p>Create Form & Validation</p>
+</div>
+<div class = "row">
+<div class = "col-8">
+<form class="row g-3 needs-validation" [formGroup] = "studentForm" >
+  <div class="col-md-4">
+    <label for="validationCustom01" class="form-label">First name</label>
+    <input type="text" formControlName = "firstName" class="form-control" id="validationCustom01" value="" required >
+    <div class="text-danger">
+      @if( studentForm.controls['firstName'].touched && studentForm.controls['firstName'].errors?.['required']){
+        <span>This is required</span>
+      }@else if(studentForm.controls['firstName'].touched && studentForm.controls['firstName'].errors?.['minlength']){
+        <span>Min char 4 required</span>
+      }  
     </div>
-    <div class="col-md-4">
-      <label for="validationCustom02" class="form-label">Last name</label>
-      <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
-      <div class="valid-feedback">
-        Looks good!
-      </div>
+   
+  </div>
+  <div class="col-md-4">
+    <label for="validationCustom02" class="form-label">Last name</label>
+    <input type="text" formControlName = "lastName" class="form-control" id="validationCustom02" value="" required >
+  </div>
+  <div class="col-md-4">
+    <label for="validationCustomUsername" class="form-label">Username</label>
+    <div class="input-group has-validation">
+      <span class="input-group-text" id="inputGroupPrepend"><span>&#64;</span></span>
+      <input type="text" formControlName = "userName" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
     </div>
-    <div class="col-md-4">
-      <label for="validationCustomUsername" class="form-label">Username</label>
-      <div class="input-group has-validation">
-        <span class="input-group-text" id="inputGroupPrepend">@</span>
-        <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-        <div class="invalid-feedback">
-          Please choose a username.
-        </div>
-      </div>
+        @if( studentForm.controls['userName'].touched && studentForm.controls['userName'].errors?.['email']){
+          <span class="text-danger" >Email not valid</span> 
+        }
     </div>
-    <div class="col-md-6">
-      <label for="validationCustom03" class="form-label">City</label>
-      <input type="text" class="form-control" id="validationCustom03" required>
+  
+  <div class="col-md-6">
+    <label for="validationCustom03" class="form-label">City</label>
+    <input type="text" formControlName = "city" class="form-control" id="validationCustom03" required>
+    
+  </div>
+  <div class="col-md-3">
+    <label for="validationCustom04" class="form-label">State</label>
+    <select class="form-select" formControlName = "state" id="validationCustom04" required>
+      <option selected disabled value="">Choose...</option>
+      <option>Maharashtra</option>
+      <option>Goa</option>
+      <option>Chhatisgarh</option>
+      <option>Gujrat</option>
+    </select>
+  
+  </div>
+  <div class="col-md-3">
+    <label for="validationCustom05" class="form-label">Zip</label>
+    <input type="text" formControlName = "zipCode"  class="form-control" id="validationCustom05" required>
+   
+  </div>
+  <div class="col-12">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" formControlName = "isAcceptTerms" value="" id="invalidCheck" required>
+      <label class="form-check-label" for="invalidCheck">
+        Agree to terms and conditions
+      </label>
       <div class="invalid-feedback">
-        Please provide a valid city.
+        You must agree before submitting.
       </div>
     </div>
-    <div class="col-md-3">
-      <label for="validationCustom04" class="form-label">State</label>
-      <select class="form-select" id="validationCustom04" required>
-        <option selected disabled value="">Choose...</option>
-        <option>...</option>
-      </select>
-      <div class="invalid-feedback">
-        Please select a valid state.
-      </div>
-    </div>
-    <div class="col-md-3">
-      <label for="validationCustom05" class="form-label">Zip</label>
-      <input type="text" class="form-control" id="validationCustom05" required>
-      <div class="invalid-feedback">
-        Please provide a valid zip.
-      </div>
-    </div>
-    <div class="col-12">
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-        <label class="form-check-label" for="invalidCheck">
-          Agree to terms and conditions
-        </label>
-        <div class="invalid-feedback">
-          You must agree before submitting.
-        </div>
-      </div>
-    </div>
-    <div class="col-12">
-      <button class="btn btn-primary" type="submit">Submit form</button>
-    </div>
-  </form> -->
+  </div>
+  <div class="col-12">
+      <button class="btn btn-secondary" type="button">Reset form</button>
+      <button class="btn btn-primary mx-2"  type="button" [disabled]="studentForm.invalid" (click)="onSave()">Submit</button>
+  
+  </div>
+</form>
+</div>
+<div class = "col-4">
+  <p>{{ formValue | json }}</p>
+</div>
+</div>
+
+
+
+
+
